@@ -6,15 +6,17 @@ import org.example.carpooling.exceptions.EntityNotFoundException;
 import org.example.carpooling.mappers.UserMapper;
 import org.example.carpooling.models.Feedback;
 import org.example.carpooling.models.Travel;
+import org.example.carpooling.models.TravelFilterOptions;
 import org.example.carpooling.models.User;
-import org.example.carpooling.models.UserFilterOptions;
-import org.example.carpooling.models.dto.UserFilterDto;
+import org.example.carpooling.models.dto.FilterDto;
+import org.example.carpooling.models.dto.SimpleUserDto;
 import org.example.carpooling.models.enums.UserStatus;
 import org.example.carpooling.services.AuthenticationService;
 import org.example.carpooling.services.contracts.FeedbackService;
 import org.example.carpooling.services.contracts.TravelService;
 import org.example.carpooling.services.contracts.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -23,7 +25,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/users")
@@ -189,22 +190,36 @@ public class UserMvcController {
     }
 
     @GetMapping
-    public String showAllUsers(@ModelAttribute("userFilterOptions") UserFilterDto userFilterDto, Model model) {
-        UserFilterOptions userFilterOptions = new UserFilterOptions(
-                userFilterDto.getFirstName(),
-                userFilterDto.getUsername(), userFilterDto.getEmail(),
-                userFilterDto.getSortBy(), userFilterDto.getOrderBy());
-        List<User> users = userService.getAllUsers(userFilterOptions);
-        model.addAttribute("users",
-                users.stream().map(userMapper::toSimpleDto).collect(Collectors.toList()));
+    public String showAllUsers(@ModelAttribute("userFilterOptions") FilterDto filterDto, Model model, HttpSession session) {
+        try {
+        User userModifier = authenticationService.tryGetCurrentUser(session);
+        TravelFilterOptions filterOptions = new TravelFilterOptions(
+                filterDto.getPage(),
+                filterDto.getSize() == 0 ? 10 : filterDto.getSize(),
+                filterDto.getKeyword(),
+                filterDto.getSortBy() == null ? "username" : filterDto.getSortBy(),
+                filterDto.getOrderBy() == null ? "asc" : filterDto.getOrderBy());
+        Page<User> usersPage = userService.getAllUsers(filterOptions, userModifier);
+        List<SimpleUserDto> simpleUsers = usersPage.getContent().stream().map(userMapper::toSimpleDto).toList();
+
+        model.addAttribute("totalPages", usersPage.getTotalPages());
+        model.addAttribute("currentPage", filterDto.getPage() + 1);
+        model.addAttribute("totalItems", usersPage.getNumberOfElements());
+        model.addAttribute("users", simpleUsers);
         return "UsersView";
+        } catch (AuthorizationException e) {
+            model.addAttribute("statusCode", HttpStatus.UNAUTHORIZED.getReasonPhrase());
+            model.addAttribute("error", "Not authorized");
+            return "ErrorView";
+        }
     }
 
     @GetMapping("/block/{id}")
     public String handleUserBlock(@PathVariable int id, @ModelAttribute("block") User user, Model model,
                                   HttpSession session) {
-        User userModifier = authenticationService.tryGetCurrentUser(session);
+
         try {
+            User userModifier = authenticationService.tryGetCurrentUser(session);
             userService.updateUserStatus(id, userModifier, UserStatus.BLOCKED);
             return "redirect:/users";
         } catch (AuthorizationException e) {
@@ -217,8 +232,9 @@ public class UserMvcController {
     @GetMapping("/unblock/{id}")
     public String handleUserUnblock(@PathVariable int id, @ModelAttribute("unblock") User user, Model model,
                                     HttpSession session) {
-        User userModifier = authenticationService.tryGetCurrentUser(session);
+
         try {
+            User userModifier = authenticationService.tryGetCurrentUser(session);
             userService.updateUserStatus(id, userModifier, UserStatus.ACTIVE);
             return "redirect:/users";
         } catch (AuthorizationException e) {
@@ -231,8 +247,8 @@ public class UserMvcController {
     @GetMapping("/makeAdmin/{id}")
     public String handleUserMakeAdmin(@PathVariable int id, @ModelAttribute("makeAdmin") User user, Model model,
                                       HttpSession session) {
-        User userModifier = authenticationService.tryGetCurrentUser(session);
         try {
+            User userModifier = authenticationService.tryGetCurrentUser(session);
             userService.changeUserAdminValue(id, userModifier, true);
             return "redirect:/users";
         } catch (AuthorizationException e) {
@@ -245,8 +261,8 @@ public class UserMvcController {
     @GetMapping("/unmakeAdmin/{id}")
     public String handleUserUnMakeAdmin(@PathVariable int id, @ModelAttribute("unmakeAdmin") User user, Model model,
                                         HttpSession session) {
-        User userModifier = authenticationService.tryGetCurrentUser(session);
         try {
+            User userModifier = authenticationService.tryGetCurrentUser(session);
             userService.changeUserAdminValue(id, userModifier, false);
             return "redirect:/users";
         } catch (AuthorizationException e) {
@@ -259,8 +275,8 @@ public class UserMvcController {
     @GetMapping("/delete/{id}")
     public String handleUserDelete(@PathVariable int id, @ModelAttribute("delete") User user, Model model,
                                    HttpSession session) {
-        User userModifier = authenticationService.tryGetCurrentUser(session);
         try {
+            User userModifier = authenticationService.tryGetCurrentUser(session);
             userService.delete(id, userModifier);
             return "redirect:/users";
         } catch (AuthorizationException e) {
